# solana

./: .gitignore
anchor/_o1_init/: Anchor.toml  package.json
anchor/_o1_init/tests/: _o1_init.ts
anchor/_o2_update_data/: Anchor.toml
anchor/_o2_update_data/programs/_o2_update_data/: Cargo.toml
anchor/_o2_update_data/programs/_o2_update_data/src/: lib.rs
anchor/_o2_update_data/tests/: _o2_update_data.ts
anchor/_o3_cpi/: Anchor.toml
anchor/_o3_cpi/programs/_o3_cpi_master/: Cargo.toml
anchor/_o3_cpi/programs/_o3_cpi_master/src/: lib.rs
anchor/_o3_cpi/tests/: _o3_cpi_master.ts
anchor/_o4_error_management/: Anchor.toml  package.json
anchor/_o4_error_management/tests/: _o4_error_management.ts
anchor/_o5_vote_pda/: Anchor.toml
anchor/_o5_vote_pda/programs/_o5_vote_pda/: Cargo.toml
anchor/_o5_vote_pda/programs/_o5_vote_pda/src/: lib.rs
anchor/_o5_vote_pda/tests/: _o5_vote_pda.ts
anchor/_o6_tic_tac_toe/: Anchor.toml  package.json
anchor/_o6_tic_tac_toe/tests/: _o6_tic_tac_toe.ts
build_space/build_space_epic/gif-portal-starter/: package.json
build_space/build_space_epic/tests/: build_space_epic.js
build_space/nft/: .gitignore  README.md  package.json
build_space/nft/assets/: 0.json  1.json  2.json
build_space/nft/pages/: index.js
build_space/nft/styles/: _page.scss
build_space_epic/: Anchor.toml
build_space_epic/gif-portal-starter/src/: App.css
build_space_epic/programs/build_space_epic/: Cargo.toml
build_space_epic/tests/: build_space_epic.js
cross-program-invocation/: Cargo.toml
cross-program-invocation/src/: lib.rs  processor.rs
cross-program-invocation/tests/: functional.rs
crow-funding/fe/: .eslintrc.js  package.json  tsconfig.json
crow-funding/fe/src/: App.tsx  index.tsx
crow-funding/program/: Cargo.toml
crow-funding/program/src/: entrypoint.rs  processor.rs
dApp-email-full-stack/email-app/: Cargo.toml  note.txt  package.json
dApp-email-full-stack/email-app/src/: error.rs  instruction.rs  processor.rs  state.rs
dApp-email-full-stack/fe/: .eslintrc.json  env.json  package.json  tsconfig.json
dApp-email-full-stack/fe_next_12/: package.json
dapp/fe/: .eslintrc.json  .gitignore  package.json
dapp/fe/scripts/: set-environment.ts
dapp/program/: Cargo.toml
dapp/program/src/: lib.rs
dapp/program/tests/: lib.rs
escrow/: Cargo.toml
escrow/src/: lib.rs
figment.io/crow-funding/fe/: .eslintrc.js
figment.io/crow-funding/program/: Cargo.toml
figment.io/crow-funding/program/src/: state.rs
figment.io/dApp-email-full-stack/email-app/: Cargo.toml
figment.io/dApp-email-full-stack/fe_next_12/: tsconfig.json
figment.io/streaming-protocol/be/: Cargo.toml
figment.io/streaming-protocol/be/migrations/2022-01-27-075143_Stream/: down.sql  up.sql
figment.io/streaming-protocol/be/src/: consts.rs  main.rs  models.rs  routes.rs  schema.rs  solana.rs
figment.io/streaming-protocol/program/: Cargo.toml  package.json
figment.io/streaming-protocol/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
figment.io/streaming-protocol/wallet/: keypair.json  note.txt
lab-hello-world/client/: .eslintrc.json  package.json  tsconfig.json
lab-hello-world/hi_world/: Cargo.toml
lab-hello-world/hi_world/src/: entrypoint.rs  processor.rs
lab-hello-world/hi_world/tests/: lib.rs
lab-sol-pay/solana-pay/: package.json
logging/: Cargo.toml  package.json
logging/src/: entrypoint.rs  processor.rs
logging/tests/: functional.rs
send-money/: .env  .eslintrc.js  package.json
send-money/src/: App.tsx  index.tsx
sol-escrow/: Cargo.toml  package.json
sol-escrow/client/: package.json  terms.json  tsconfig.json  tutorial.txt
sol-escrow/client/accounts/: alice.json  alice_pub.json  alice_x_pub.json  alice_y_pub.json  bob.json  bob_pub.json  bob_x_pub.json  bob_y_pub.json  escrow_pub.json  id.json  id_pub.json  mint_x_pub.json  mint_y_pub.json  program_pub.json  tutorial.txt
sol-escrow/client/src/: alice.ts  alice__.ts  bob.ts  const.ts  setup.ts  utils.ts
sol-escrow/client/src/test_lib/: index.ts  spl_token.ts
sol-escrow/client/test_lib/: index.ts
sol-escrow/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
spl_cli_onchain/rust_solana_program/: Cargo.toml
spl_cli_onchain/solana-program-library/: package.json
sysvar_accounts/: Cargo.toml
sysvar_accounts/src/: entrypoint.rs  lib.rs  processor.rs
sysvar_accounts/tests/: functional.rs
transfer-lamports/: Cargo.toml
transfer-lamports/src/: entrypoint.rs  lib.rs  processor.rs
transfer-lamports/tests/: functional.rs
(+218 files in other folders)
