[package]
name = "cross-program-invocation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.7.10"

[dev-dependencies]
solana-program-test = "1.7.10"
solana-sdk = "1.7.10"
