cargo-features = ["edition2021"]

[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.8.1"

[dev-dependencies]
solana-program-test = "1.8.2"
solana-sdk = "1.8.2"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
