[package]
name = "be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.2"
diesel = { version = "1.4.8", features = ["postgres"] }
serde = "1.0.136"
dotenv = "0.15.0"
solana-account-decoder = "1.9.5"
solana-client = "1.9.5"
solana-sdk = "1.9.5"
rocket = {version = "0.5.0-rc.1", features = ["tls", "json"]}
rocket_cors = {git = "https://github.com/lawliet89/rocket_cors", branch = "master"}

[features]
