[package]
name = "streaming-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
solana-program = "1.9.4"
thiserror = "1.0.30"

[dev-dependencies]
solana-program-test = "1.9.4"
solana-sdk = "1.9.4"

[lib]
crate-type = ["cdylib", "lib"]